crates/as2_pcode/src/parser/snapshots/ruasc_as2_pcode__parser__tests__printed@numbers.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/numbers.pcode
---
ConstantPool "i0", "i1", "i42", "iLarge", "iLargePlusOne", "f0", "f1", "fLeadingDot", "fTrailingDot", "h0", "hMix", "hMaxByte", "eBig", "eSmall", "ePlus", "eLeadingDot", "eTrailingDot", "eSci", "nDec", "nHex", "nFloat", "pDec", "sum", "diff", "prod", "quot", "combo", "i0 = ", "i1 = ", "i42 = ", "iLarge = ", "iLargePlusOne = ", "f0 = ", "f1 = ", "fLeadingDot = ", "fTrailingDot = ", "h0 = ", "hMix = ", "hMaxByte = ", "eBig = ", "eSmall = ", "ePlus = ", "eLeadingDot = ", "eTrailingDot = ", "eSci = ", "nDec = ", "nHex = ", "nFloat = ", "pDec = ", "sum = ", "diff = ", "prod = ", "quot = ", "combo = "
Push constant0
Push 0
DefineLocal
Push constant1
Push 1
DefineLocal
Push constant2
Push 42
DefineLocal
Push constant3
Push 2147483647
DefineLocal
Push constant4
Push 2147483648.0
DefineLocal
Push constant5
Push 0
DefineLocal
Push constant6
Push 1.23
DefineLocal
Push constant7
Push 0.5
DefineLocal
Push constant8
Push 5
DefineLocal
Push constant9
Push 0
DefineLocal
Push constant10
Push 6699
DefineLocal
Push constant11
Push 255
DefineLocal
Push constant12
Push 10000000000.0
DefineLocal
Push constant13
Push 0.0000000001
DefineLocal
Push constant14
Push 2500
DefineLocal
Push constant15
Push 50
DefineLocal
Push constant16
Push 5000
DefineLocal
Push constant17
Push 602200000000000000000000.0
DefineLocal
Push constant18
Push -123
DefineLocal
Push constant19
Push -255
DefineLocal
Push constant20
Push -3.14
DefineLocal
Push constant21
Push 7
DefineLocal
Push constant22
Push 6
DefineLocal
Push constant23
Push 6
DefineLocal
Push constant24
Push 42
DefineLocal
Push constant25
Push 3.142857142857143
DefineLocal
Push constant26
Push 774.25
DefineLocal
Push constant27
Push constant0
GetVariable
Add2
Trace
Push constant28
Push constant1
GetVariable
Add2
Trace
Push constant29
Push constant2
GetVariable
Add2
Trace
Push constant30
Push constant3
GetVariable
Add2
Trace
Push constant31
Push constant4
GetVariable
Add2
Trace
Push constant32
Push constant5
GetVariable
Add2
Trace
Push constant33
Push constant6
GetVariable
Add2
Trace
Push constant34
Push constant7
GetVariable
Add2
Trace
Push constant35
Push constant8
GetVariable
Add2
Trace
Push constant36
Push constant9
GetVariable
Add2
Trace
Push constant37
Push constant10
GetVariable
Add2
Trace
Push constant38
Push constant11
GetVariable
Add2
Trace
Push constant39
Push constant12
GetVariable
Add2
Trace
Push constant40
Push constant13
GetVariable
Add2
Trace
Push constant41
Push constant14
GetVariable
Add2
Trace
Push constant42
Push constant15
GetVariable
Add2
Trace
Push constant43
Push constant16
GetVariable
Add2
Trace
Push constant44
Push constant17
GetVariable
Add2
Trace
Push constant45
Push constant18
GetVariable
Add2
Trace
Push constant46
Push constant19
GetVariable
Add2
Trace
Push constant47
Push constant20
GetVariable
Add2
Trace
Push constant48
Push constant21
GetVariable
Add2
Trace
Push constant49
Push constant22
GetVariable
Add2
Trace
Push constant50
Push constant23
GetVariable
Add2
Trace
Push constant51
Push constant24
GetVariable
Add2
Trace
Push constant52
Push constant25
GetVariable
Add2
Trace
Push constant53
Push constant26
GetVariable
Add2
Trace
