crates/as2_pcode/src/parser/snapshots/ruasc_as2_pcode__parser__tests__printed@special_functions.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/special_functions.pcode
---
ConstantPool "x", "http://ruffle.rs", "window", "/:$version", "url", "target", "_level12", "_level", "abc", "message"
Push 123
Call
Push constant0
GetVariable
AsciiToChar
Pop
GetTime
Pop
GetUrl "http://ruffle.rs", ""
GetUrl "http://ruffle.rs", "window"
Push constant1
Push constant2
GetUrl2 false, false, 1
Push constant3
GetVariable
Pop
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 65535
Play
GotoFrame 0
Play
GotoFrame 1
Play
GotoFrame 0
Play
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
ToInteger
Pop
Push constant0
GetVariable
StringLength
Pop
Push constant4
Push constant5
GetUrl2 false, true, 0
Push constant4
Push constant5
GetUrl2 false, true, 1
GetUrl "url", "_level12"
Push constant4
Push constant6
GetUrl2 false, false, 1
Push constant4
Push constant7
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 1
Push constant4
Push constant5
GetUrl2 true, true, 0
Push constant4
Push constant0
GetVariable
GetUrl2 true, true, 0
Push constant4
Push constant5
GetUrl2 true, true, 1
Push constant4
Push constant6
GetUrl2 true, false, 0
Push constant4
Push constant6
GetUrl2 true, false, 1
Push constant4
Push constant7
Push constant0
GetVariable
StringAdd
GetUrl2 true, false, 1
Push constant0
GetVariable
MBAsciiToChar
Pop
Push constant0
GetVariable
MBStringLength
Pop
Push constant0
GetVariable
MBCharToAscii
Pop
Push constant8
Push 1
Push -1
MBStringExtract
Pop
Push constant8
Push 1
Push 2
MBStringExtract
Pop
NextFrame
GotoFrame 0
Push constant0
GetVariable
ToNumber
Pop
Push 123
RandomNumber
Pop
Push constant9
Trace
