crates/as2_pcode/src/parser/snapshots/ruasc_as2_pcode__parser__tests__printed@trace_hello_world.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/trace_hello_world.pcode
---
Push "Hello World"
Trace
